assets/less/styles.less
// .chart div {
//       font: 10px sans-serif;
//       background-color: steelblue;
//       text-align: right;
//       padding: 3px;
//       margin: 1px;
//       color: white;
// }


.chart rect {
  fill: steelblue;
}

.chart text {
  font: 15px sans-serif;
  z-index: 10;
}

